--- a/documentacion/memoria.tex
+++ b/documentacion/memoria.tex
@@ -25,9 +25,37 @@
 
 % Incluir gráficos
 \usepackage{graphicx}
+\usepackage{subcaption}
 \usepackage{float}
 
+% Incluir código
+\usepackage{listings}
 
+\definecolor{codegreen}{rgb}{0,0.6,0}
+\definecolor{codegray}{rgb}{0.5,0.5,0.5}
+\definecolor{codepurple}{rgb}{0.58,0,0.82}
+\definecolor{backcolour}{rgb}{0.95,0.95,0.92}
+
+\lstdefinestyle{mystyle}{
+  language=bash,
+  backgroundcolor=\color{backcolour},   
+  commentstyle=\color{codegreen},
+  keywordstyle=\color{magenta},
+  numberstyle=\tiny\color{codegray},
+  stringstyle=\color{codepurple},
+  basicstyle=\ttfamily\footnotesize,
+  breakatwhitespace=false,         
+  breaklines=true,                 
+  captionpos=b,                    
+  keepspaces=true,                 
+  numbers=none,                   
+  showspaces=false,                
+  showstringspaces=false,
+  showtabs=false,                  
+  tabsize=2
+}
+
+\lstset{style=mystyle}
 
 % Sangrado y espacio entre párrafos
 \setlength{\parskip}{1em}
@@ -50,7 +78,7 @@
 
 \tableofcontents
 
-\fontsize{10}{12}\selectfont
+\fontsize{12}{16}\selectfont
 
 \newpage
 
@@ -173,7 +201,7 @@ por ejemplo:
 \begin{itemize}
 \item
   Logística: Rastreo de envíos por correo o estado del stock en
-  almacenes automatizando lectura de los items mediante wifi.
+  almacenes automatizando lectura de los items mediante WiFi.
 \item
   Transporte: Gestión automática de rutas por GPS;\ captura y procesado
   de infracciones de velocidad.
@@ -222,7 +250,7 @@ Reino Unido a pesar de compartir las propiedades de frecuencia y
 potencial eléctrico y situarse geográficamente más cercanos. Otras
 regiones más distantes como Japón o Estados Unidos de América usan
 enchufes con características distintas a ambas. Se ofrecen algunos
-ejemplos de las propidades de los enchufes por países en el
+ejemplos de las propiedades de los enchufes por países en el
 Cuadro~\ref{table:enchufes-paises}.
 
 \begin{table}[H]
@@ -247,6 +275,7 @@ Cuadro~\ref{table:enchufes-paises}.
 Trabajaremos con el tipo de enchufe usado en España, que cuenta con un
 potencial de 230V y una frecuencia de 50Hz\cite{IECWorldPlugs}.
 
+\newpage
 
 \subsection{¿Qué es un enchufe
 inteligente?}\label{que-es-un-enchufe-inteligente}
@@ -278,6 +307,8 @@ de las opciones; destacando la posibilidad de integración con otros
 dispositivos que proporcionen una mayor accesibilidad (p.ej.\ la interfaz
 de voz de un asistente de móvil).
 
+\newpage
+
 \subsection{Tipos de enchufes}\label{tipos-de-enchufes}
 
 Atendiendo a sus características más distintivas podemos hacer una
@@ -285,7 +316,7 @@ clasificación (no excluyente) de:
 
 \begin{itemize}
 \item
-  Enchufes inteligentes (E.I.) por control remoto (wifi, bluetooth,
+  Enchufes inteligentes (E.I.) por control remoto (WiFi, bluetooth,
   infrarrojos u otros tipos de señales electromagnéticas).
 \item
   E.I. programables, aquellos que permiten la programación temporal de eventos.
@@ -627,6 +658,27 @@ distintos. La consulta de información relativa al consumo por parte
 del usuario final se produce vía HTTP y se explicará con mayor
 detenimiento en la Sección~\ref{subsubsec:consulta-api}.
 
+MQTT define tres niveles de QoS para adaptarse a los requisitos del
+sistema: 0 para una única entrega sin confirmación, 1 para al menos
+una entrega donde se requiere una confirmación, 2 para exactamente una
+entrega de mensaje utilizando una confirmación en 4 pasos
+(\textit{four step handshake}). En definitiva a mayor QoS mayor
+fiabilidad en el envío de mensajes a expensas de una mayor latencia y
+requisitos de ancho de banda.
+
+En nuestro sistema hemos optado por utilizar el QoS 0, pues la
+información a transmitir es tolerante a pérdidas. Se envían mensajes
+con el consumo con gran frecuencia y, por ser una serie temporal donde
+todos los datos guardan una relación con los inmediatamente contiguos,
+se puede realizar una estimación de valores perdidos por una
+interpolación sin que esto repercuta negativamente en el análisis.
+
+Todos los mensajes se pueden configurar para ser retenidos incluso
+después de haber sido transmitidos a todos los suscriptores. Esto
+resulta especialmente útil si aparece algún suscriptor en algún tema
+que se actualice poco frecuentemente para que pueda acceder a la
+información con la que trabajar lo antes posible.
+
 
 \newpage
 
@@ -643,6 +695,27 @@ recursos. En nuestro caso utilizamos un servidor con recursos
 limitados, una Raspberry Pi, por lo que resulta beneficioso utilizar
 un broker tan ligero que no suponga una sobrecarga en el sistema.
 
+Los temas en Mosquitto se disponen siguiendo una estructura jerárquica
+similar a un sistema de archivos (\texttt{/RUTA/AL/TEMA}). En forma de
+árbol. Permitiendo a un suscriptor suscribirse tanto a un tema
+particular (nodo hoja) como a un nodo más general (cualquier nodo
+interno).
+
+En su estructura también guardan metainformación relativa al propio
+broker: bytes enviados y recibidos, clientes conectados o mensajes
+pendientes entre otros.
+
+Otra utilidad de mosquitto es la capacidad de establecer
+\textit{puentes}. Múltiples brokers pueden estar conectados con esta
+funcionalidad. Esto es útil cuando se desea compartir información
+entre distintas localizaciones pero no toda la información ha de ser
+compartida.
+
+Mosquitto permite numerosas opciones de configuración. Desde
+autenticación, cifrado y retención de mensajes hasta cuestiones de registros
+(\textit{logging}), conectividad o uso los recursos del sistema.
+
+
 \newpage
 
 \subsection{Enchufe}\label{subsec:enchufe}
@@ -657,7 +730,7 @@ conectado para regular su uso.
 El enchufe está compuesto por cuatro elementos principales:
 
 \begin{itemize}
-\item{\textbf{Módulo Wifi:} Microcontrolador
+\item{\textbf{Módulo WiFi:} Microcontrolador
   ESP32\cite{ESP32SeriesDatasheet}. Núcleo del enchufe, encargado de
   ejecutar el programa principal que gestiona el manejo de lecturas y
   del relé. Dispone de funcionalidad WiFi para conectarse vía MQTT al
@@ -682,13 +755,16 @@ El enchufe está compuesto por cuatro elementos principales:
   determinar si se está consumiendo o generando electricidad.}
 
 \item{\textbf{Fuente de alimentación:} Una fuente de alimentación de
-  5 Voltios y 2 Amperios para alimentar el módulo wifi. Un conversor
+  5 Voltios y 2 Amperios para alimentar el módulo WiFi. Un conversor
   que toma la corriente alterna que llega al enchufe y alimenta al
   resto del circuito.}
 \end{itemize}
 
-\textit{\textless Aquí se puede insertar algún esquema del enchufe por
-  dentro, señalando con colores cada elemento de estos \textgreater}
+\begin{figure}[H]
+  \centering
+  \includegraphics[width=0.9\textwidth]{img/esquema_enchufe_inteligente.png}
+  \caption{Esquema del Enchufe Inteligente.}\label{fig:esquema-enchufe-inteligente}
+\end{figure}
 
 \subsubsection{Diseño y construcción del enchufe}
 
@@ -700,17 +776,38 @@ externos requería alimentación extra. El ESP32 usado sí que disponía
 de WiFi y era compatible con el resto de componentes, reduciendo así
 la complejidad de este subsistema mientras otorgaba la misma funcionalidad.
 
-\textit{\textless Insertar alguna imagen de Arduino UNO y ESP32, tal
-  vez alguna comparativa \textgreater}
+\begin{figure}[H]
+  \centering
+  \begin{subfigure}{0.5\textwidth}
+    \includegraphics[width=0.9\linewidth, height=5cm]{img/arduino_uno.jpg} 
+  \end{subfigure}
+  \begin{subfigure}{0.49\textwidth}
+    \includegraphics[width=1\linewidth, height=5cm]{img/esp32_image.jpg}
+  \end{subfigure}  
+  \caption{Arduino UNO, a la izquierda, imagen de~\cite{ArduinoR3}. A su derecha
+    módulo ESP32, imagen de~\cite{industriesEspressifESP32Development2016}.}
+\end{figure}
 
 El sensor de corriente no invasivo fue seleccionado tras descartar el
-sensor ACS712\cite{ACS712DatasheetPDF}. Este introducía ruido en las
+sensor ACS712\cite{ACS712DatasheetPDF}. A pesar de realizar varias
+pruebas con varios sensores para descartar que fuera defectuoso
+descartamos el uso de esta componente. Este introducía ruido en las
 lecturas, mostrando diferencias entre el consumo esperado y el
-registrado para componentes eléctricas que conciéramos de antemano.
+registrado para componentes eléctricas que conociéramos de antemano
+(por ejemplo una bombilla).
 
-\textit{\textless Si encuentro una foto de las lecturas con ruido la
-  puedo introducir. También puedo introducir imágenes del sensor
-  ASC712, del SCT013 y explicar un poquito sus funcionamientos \textgreater}
+En su lugar el sensor SCT013 fue más consistente en las lecturas y su
+diseño no invasivo simplifica notoriamente las labores de
+mantenimiento en caso de avería y reduce el riesgo en la instalación
+al exponer menos componentes.
+
+\begin{figure}[H]
+  \centering
+  \includegraphics[width=0.8\textwidth]{img/sct013.png}
+  \caption{Sensor de corriente no invasivo.}\label{fig:sct013}
+\end{figure}
+
+
 
 Tras esta selección procedimos a probar y, posteriormente, soldar el
 enchufe a una placa base. A fin de minimizar el número de cruces entre
@@ -853,8 +950,10 @@ entre los publicadores y suscriptores de MQTT, como mencionábamos
 en~\ref{subsubsec:broker_mosquitto}, haciendo uso de Mosquitto para
 gestionar las publicaciones y suscripciones a los temas.
 
-\textit{\textless Aquí se puede explicar más cosas sobre mosquitto que
-  no vengan en la sección que se referencia\textgreater}
+La configuración de nuestro broker no permite la conexión anónima, es
+decir, toda conexión requerirá usuario y contraseña. Permitirá la
+persistencia de los mensajes que publiquen en sus temas y almacenará
+otros tantos de depuración.
 
 Es necesario que el broker esté activo y sea persistente a reinicios y
 caídas. Por esto hay que configurarlo para que Mosquitto se lance en
@@ -890,11 +989,27 @@ nuestra red y hemos solicitado un nombre de dominio que actualiza la
 IP pública del router de acceso al servidor, configurando además un
 reenvío de puertos para que un cliente pueda conectarse desde el exterior.
 
-\textit{\textless Aquí se puede hacer un esquemita sobre cómo se
-  pueden comunicar nodos periféricos con el servidor, ya sea en red
-  local o externa, explicar reenvío de puertos para externos a la red,
-  dónde se aloja y cómo se accede a la API o al control de los
-  enchufes \textgreater}
+
+\begin{figure}[H]
+  \centering
+  \includegraphics[width=0.9\textwidth]{img/esquema_estrella_internet.png}
+  \caption{Esquema de la configuración de red y conexión a internet.}\label{fig:esquema-estrella-internet}
+\end{figure}
+
+
+Como hemos indicado previamente los nodos periféricos se conectarán
+con el servidor central. Pero resulta interesante estudiar cómo se
+producen estas conexiones de acuerdo a la configuración de red.
+
+En la Figura~\ref{fig:esquema-estrella-internet} podemos ver un
+esquema de cómo se realizan las conexiones. Aquellas que están
+directamente conectadas con el servidor central representan elementos
+en la red local, cuya conexión no desentraña ninguna complejidad. Sin
+embargo, aquellas que se encuentran conectadas a un nodo intermedio
+representan las conexiones provenientes desde redes externas. Desde
+internet. Y se pueden comunicar con el servidor central mediante el
+router (nodo intermedio) que debe tener la configuración oportuna de
+reenvío de puertos.
 
 \subsubsection{Gestión de la base de datos}
 
@@ -969,9 +1084,12 @@ estos permiten una mayor flexibilidad y libertad de configuración. Por
 esto se le permite al cliente modificar desde la aplicación los
 parámetros de conexión.
 
-\textit{\textless Aquí se puede adjuntar una imagen de nuestra
-  topología de estrella y que salgan coloreados o señalados los nodos
-  finales de los clientes \textgreater}
+\begin{figure}[H]
+  \centering
+  \includegraphics[width=0.9\textwidth]{img/esquema_estrella_nodos_finales_coloreados.png}
+  \caption{Topología del sistema, en rojo los clientes de escritorio.}\label{fig:esquema-estrella-color}
+\end{figure}
+
 
 Una vez conectado al servidor la aplicación puede obtener la
 información del mismo. Consultar su base de datos para obtener el
@@ -984,16 +1102,214 @@ permitirá controlar el estado de los enchufes (modificando el estado
 de su relé) publicando en el broker en los temas de control a los que
 los enchufes estarán suscritos.
 
-\textit{\textless Se pueden añadir aquí imágenes de la interfaz de
-  usuario y referenciarlas al comentar las funcionalidades en los
-  párrafos anteriores \textgreater}
+A continuación se adjuntan algunas imágenes de la interfaz junto a una
+descripción de su utilidad:
+
+\begin{figure}[H]
+  \centering
+  \includegraphics[width=0.9\textwidth]{img/interfaz_main_window.png}
+  \caption{Ventana principal.}\label{fig:interfaz-main}
+\end{figure}
+
+Esta interfaz permite:
+
+\begin{enumerate}
+\item{Conocer el estado de conexión actual con el broker}
+\item{Acceder a la configuración de comunicación con el broker}
+\item{Acceder a una lista con los enchufes accesibles}
+\end{enumerate}
+
+\begin{figure}[H]
+  \centering
+  \includegraphics[width=0.6\textwidth]{img/interfaz_settings_window.png}
+  \caption{Ventana de ajustes.}\label{fig:interfaz-settings}
+\end{figure}
+
+En la ventana de configuración se permite:
+
+\begin{enumerate}
+\item{Modificar parámetros de configuración de red}
+\item{Restablecer configuración por defecto}
+\item{Guardar o cancelar los cambios realizados}
+\end{enumerate}
+
+\begin{figure}[H]
+  \centering
+  \includegraphics[width=0.6\textwidth]{img/interfaz_plug_list.png}
+  \caption{Lista de enchufes accesibles.}\label{fig:interfaz-plug-list}
+\end{figure}
+
+En esta ventana se muestra una lista de enchufes que se actualizan
+dinámicamente según se van conectando más enchufes al sistema. Permite
+acceder al control de cada enchufe pero también ofrece una opción para
+analizar y controlar simultáneamente todos los enchufes conectados al
+sistema.
+
+La visualización de cada enchufe es la siguiente:
+
+\begin{figure}[H]
+  \centering
+  \includegraphics[width=1\textwidth]{img/interfaz_graphics.png}
+  \caption{Ventana de un enchufe.}\label{fig:interfaz-graphics}
+\end{figure}
+
+En esta vista se permite visualizar de manera rápida el consumo para
+cada enchufe (o para todos si se accede desde la opción
+general). Además se ofrece información exacta sobre el estado actual
+mostrando la última lectura, se permite el control individual con el
+interruptor de la parte superior derecha y se permite acceder a un
+registro en detalle del consumo de este enchufe con el botón
+\textit{Ver más} en la parte inferior derecha.
+
+\begin{figure}[H]
+  \centering
+  \includegraphics[width=0.9\textwidth]{img/interfaz_log.png}
+  \caption{Log en detalle del consumo de un enchufe.}\label{fig:interfaz-log}
+\end{figure}
+
 
 \newpage
 
 \section{Pruebas y test}\label{tests}
 
-\textit{Aquí se adjuntarán algunas imágenes y resultados de los tests
-  que se realicen sobre distintas partes del sistema}
+En el desarrollo de cualquier software es determinante asegurarse de
+que el código funcionará siempre en el contexto del sistema a pesar de
+que se introduzcan cambios en el propio código. La salida debe ser la
+esperada a pesar de avanzar en el desarrollo del producto.
+
+Nuestro sistema, igualmente, necesita que el desarrollo sea pautado
+por unas pruebas o \textit{tests} que nos garanticen que lo que
+estamos haciendo efectivamente es lo que deseamos obtener.
+
+La particularidad a la hora de realizar \textit{tests} en un sistema
+tan complejo reside en que cada elemento del sistema debe
+individualmente asegurarse de su correcto funcionamiento y debe
+existir algún tipo de prueba que compruebe que los componentes se
+están integrando y comunicando debidamente.
+
+\subsection{Pruebas en el módulo WiFi}
+
+En primer lugar analizaremos el proceso de prueba para el módulo
+WiFi. En realidad este subsistema al ser en esencia un
+microcontrolador se puede analizar como un sistema embebido como
+también pasa con Arduino.
+
+Existen varias alternativas para realizar tests unitarios para
+Arduino o ESP32~\cite{murdochMmurdochArduinounit2020,
+  salmenrinneSusundbergArduinosimpleunittest2019}. Algunas orientadas
+a la ejecución en la propia placa y la comunicación por puertos
+seriales y otras orientadas a la simulación por software de la
+placa. En cualquier caso herramientas que se encuentran en desarrollo
+y que distan de ser una solución consolidada.
+
+Ambos métodos tienen sus carencias, ejecutar en una placa conlleva
+ocupar el uso de una placa en todo momento del desarrollo y puede
+ralentizar el avance por los tiempos de carga del programa e
+interpretación de los resultados obtenidos por serial. El proceso de
+simulación, si bien consigue ser más rápido, pues un procesador de un
+ordenador personal resulta de órdenes de magnitud más rápido que un
+microcontrolador, tiene dos inconvenientes principales: Por un lado la
+complejidad de la simulación, debes adaptar las clases y estructuras
+de datos a las que necesitaría tu programa (requisitos para simular
+seriales, por ejemplo) y, por otro lado, careces del acceso real a
+sensores u otros elementos que puedan estar influyendo en la salida de
+tu sistema.
+
+Sea cual sea el método utilizado es necesario tener en cuenta que un
+sistema embebido puede fallar por múltiples razones y no nos va a
+garantizar el correcto funcionamiento. El objetivo será garantizar que
+el comportamiento sea correcto o, al menos, consistente en los errores
+(esperado).
+
+En nuestro caso hemos hecho probado que el microcontrolador funcione
+adecuadamente simulando los valores obtenidos por los
+sensores. Nuestro objetivo es garantizar el correcto funcionamiento
+del programa del microcontrolador, asumiendo que los sensores
+funcionarán bien.
+
+\newpage
+
+\subsection{Pruebas en el servidor central}
+
+En el servidor central se sitúan dos elementos principales: El broker
+de Mosquitto, que es un software externo pero que podríamos usar para
+probar efectiva integración de este con enchufes y clientes finales; y
+la API que envuelve la funcionalidad de consulta de la base de datos,
+que debe ser debidamente probado.
+
+Para comprobar el debido funcionamiento de los módulos en esta parte
+hemos realizado un conjunto de pruebas mediante una herramienta
+genérica de tests unitarios (\textit{unittest} y \textit{pytest}
+en Python).
+
+Algunos de estos tests en el servidor han sido comprobar la creación
+de la base de datos o el comportamiento ante los errores de conexión
+del módulo al broker.
+
+Estos nos han servido para diseñar mejor la conducta de este
+sistema. Por ejemplo se encontró el problema de que el programa no
+podía continuar su ejecución si el broker no estaba
+disponible. Captando la excepción oportuna en uno de los tests
+elaborar un comportamiento que mejorara la estabilidad del servidor.
+
+\begin{figure}[H]
+\begin{lstlisting}
+test_create_database
+.test_connection
+.
+----------------------------------------------------------------------
+Ran 2 tests in 5.038s
+
+OK
+\end{lstlisting}
+
+\caption{Salida de la ejecución los tests creados en el servidor}
+\end{figure}
+
+\newpage
+
+\subsection{Pruebas en la aplicación de escritorio}
+
+Nuestra aplicación de escritorio también consta de dos elementos que
+resultan de interés: La interfaz de usuario y los módulos que dan
+soporte a la lógica de la aplicación.
+
+Realizar tests sobre una interfaz de usuario puede resultar ser una
+tarea menos habitual en nuestro ámbito de trabajo usual, de hecho no
+suele ser suficiente utilizar una herramienta genérica. Por suerte
+existen herramientas específicas para comprobar el correcto
+funcionamiento de la interfaz de usuario. Este es el caso de la
+biblioteca que hemos utilizado, que dispone de una herramienta
+realizar test específicos tales como creación de elementos, contenido
+de campos o simulación de acciones (\textit{QTest} para
+\textit{PySide2}, en Python).
+
+
+\begin{figure}[H]
+\begin{lstlisting}
+.test_main_window_creation
+.test_plug_list_window
+.test_plug_window
+.test_check_connection
+.test_get_from_db
+.test_get_settings
+.test_load_scene
+.
+----------------------------------------------------------------------
+Ran 8 tests in 21.578s
+
+OK
+
+\end{lstlisting}
+
+\caption{Salida de la ejecución los tests creados para la app}
+\end{figure}
+
+Para esta parte hemos tenido que comprobar múltiples apartados: La
+creación de la interfaz, su correcto funcionamiento y la funcionalidad
+de los módulos que se usan para dar soporte al subsistema de la
+aplicación de escritorio.
+
 
 \newpage
 
@@ -1036,6 +1352,18 @@ gestionar la comunicación y elaborar la interfaz de un usuario
 final. En resumen, llevar un diseño de principio a fin, contemplando
 todas las posibilidades de diseño a la par que se investiga sobre
 aquellas que se desconocen.
+
+Por este último motivo han surgido desafíos derivados. La importancia
+de establecer un desarrollo basado y dirigido por tests es un tema que
+en nuestra formación se ha procurado tener presente. Está claro que si
+se quiere desarrollar un software de calidad y escalable es vital
+establecer este paradigma de desarrollo. Sin embargo el ámbito de este
+proyecto ha sido amplio y ha resultado una dificultad procurar
+elaborar un conjunto de pruebas o tests que verifiquen el correcto
+desarrollo del proyecto y la calidad del mismo. Esto me ha permitido
+conocer más de cerca cómo se realiza este desarrollo en otros ámbitos
+menos usuales y, aunque se pueda mejorar la calidad del mismo,
+establecer una buena aproximación.
 
 Considero este proyecto como una oportunidad de aprender y de
 desarrollo personal como Ingeniero Informático, pero también espero
